--- a/spring_basic/spring/src/main/resources/templates/members/memberList.html
+++ b/spring_basic/spring/src/main/resources/templates/members/memberList.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<div class="container">
+  <table>
+    <thead>
+    <tr>
+      <th>#</th>
+      <th>이름</th>
+    </tr>
+    </thead>
+    <tbody>
+      <tr th:each ="member : ${members}">
+        <td th:text="${member.id}"></td>
+        <td th:text="${member.name}"></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 </body>
 </html>
